--- a/home.html
+++ b/home.html
@@ -13,12 +13,23 @@
     
     <body>
         <header>
+            <div class="dropdown">
+                <button>Menu</button>
+                <div class="content">
+                    <a href = "1.html">1</a>
+                    <a href = "2.html">2</a>
+                    <a href = "3.html">3</a>
+
+                    </a>
+                </div>
+            </div>
             <h1>Welcome to Nelson's Practice Website</h1>
             <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target = "_blank">About this Website</a>
             <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target = "_blank">About Me</a>
         </header>
         <hr>
         <main>
+
             <div id = "box1">
             <p style="margin-left:70px; display: block;" >
                 This is my school
