--- a/2.html
+++ b/2.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel = "icon" type = "image/png" href = "image/icon.png">
-        <link rel="stylesheet" href = "style.css">
-        <title>My first Web Page(Probably not)</title>
-    </head>
-    <body>
-        <header>
-            <div class="dropdown">
-                <button>Menu</button>
-                <div class="content">
-                    <a href = "1.html">1</a>
-                    <a href = "2.html">2</a>
-                    <a href = "3.html">3</a>
 
-                    </a>
-                </div>
+<head>
+    <link rel="icon" type="image/png" href="image/icon.png">
+    <link rel="stylesheet" href="style.css">
+    <title>My first Web Page(Probably not)</title>
+</head>
+
+<body>
+    <header>
+        <div class="dropdown">
+            <button>Menu</button>
+            <div class="content">
+                <a href="1.html">1</a>
+                <a href="2.html">2</a>
+                <a href="3.html">3</a>
+
+                </a>
             </div>
-            <h1>Welcome to Nelson's Practice Website</h1>
-            <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target = "_blank">About this Website</a>
-            <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ" target = "_blank">About Me</a>
-        </header>
-        <h1>A Test Sentence</h1>
-        <div class="pagination">
-            <a href=""><</a>
-            <a href="1.html">1</a>
-            <a href="2.html" class = "active">2</a>
-            <a href="3.html">3</a>
-            <a href="">></a>
         </div>
-    </body>
+        <h1>Welcome to Nelson's Practice Website</h1>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About this Website</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About Me</a>
+    </header>
+    <h1>A Test Sentence</h1>
+    <div class="pagination">
+        <a href=""> &lt; </a>
+        <a href="1.html">1</a>
+        <a href="2.html">2</a>
+        <a href="3.html" class="active">3</a>
+        <a href="">></a>
+    </div>
+</body>
+
 </html>
