--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <h1>Welcome to Nelson's Practice Website</h1>
         <div class="dropdown">
             <button>Menu</button>
             <div class="content">
@@ -19,11 +20,14 @@
                 </a>
             </div>
         </div>
-        <h1>Welcome to Nelson's Practice Website</h1>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About this Website</a>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">About Me</a>
+        <nav class="navbar">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <h1>Welcome</h1>
     <div class="pagination">
         <a href=""> &lt; </a>
         <a href="1.html">1</a>
@@ -31,7 +35,6 @@
         <a href="3.html" class="active">3</a>
         <a href="">></a>
     </div>
-
 </body>
 
 </html>
