--- a/html_css/home.html
+++ b/html_css/home.html
@@ -14,24 +14,24 @@
 
 <body>
     <header>
-        <h1 id="head1">Welcome to Nelson's Practice Website</h1>
-        <div class="dropdown">
-            <button>Menu</button>
-            <div class="content">
-                <a href="1.html">1</a>
-                <a href="2.html">2</a>
-                <a href="3.html">3</a>
-
-                </a>
+        <h1>Welcome to Nelson's Practice Website</h1>
+        <div class="nav1">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="dropdown">
+                <button>Menu</button>
+                <div class="content">
+                    <a href="1.html">1</a>
+                    <a href="2.html">2</a>
+                    <a href="3.html">3</a>
+                </div>
             </div>
         </div>
-        <nav class="navbar">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
     <hr>
