--- a/html_css/2.html
+++ b/html_css/2.html
@@ -28,12 +28,20 @@
             </div>
         </div>
     </header>
-    <h1>A Test Sentence</h1>
+    <h1>My Movie</h1>
+    <div style="flex: auto; justify-content: center; display: flex; flex-direction: column; align-items: center;" >
+        <p> Music Fountain in Las Vegas</p>
+        <video width = "400" height = auto controls muted><source src="test.mp4" type="video/mp4"></video><br>
+        <p> My Favorite Guitar Song</p>
+        <audio loop controls>  
+            <source src="南澤大介 - At Zanarkand.mp3" type="audio/mpeg" >
+        </audio>  
+    <div>
     <div class="pagination">
         <a href=""> &lt; </a>
         <a href="1.html">1</a>
-        <a href="2.html">2</a>
-        <a href="3.html" class="active">3</a>
+        <a href="2.html" class="active">2</a>
+        <a href="3.html" >3</a>
         <a href="">></a>
     </div>
 </body>
