--- a/html_css/contact.html
+++ b/html_css/contact.html
@@ -122,7 +122,7 @@
                 <input type="radio" id="other" name="gender" value="other" required>
             </div>
         </fieldset>
-        <form>
+        <form method="post">
             <div>
                 <label for="user_first_name">First Name:</label>
                 <input type="text" id="user_first_name">
